# table-io

./: .gitignore  .pylintrc  LICENSE.txt  README.md  README_pypi.md  pyproject.toml  run_build.py  run_clean.py  run_clean_build.py  run_pypi_build.py  run_setup_build_environment.py  setup.py
custom_build_tools/: custom_spec.py  pydoc-markdown.yml  pydoc-markdown_protected.yml
custom_build_tools/src/: hooks.py  run_examples.py
doc/: api.md  protected_api.md
example/src/example/: README.md  __init__.py  cmd_for_examples.py  e00_really_simple_write_table.py  e01_simple_read_write.py  e02_more_write.py  e02_rrs_input_format.py  e03_rrs_input_format.py  e04_rrs_input_format_list.py  e05_read_write_valueconversion.py  e09_multi_sheet.py  (+11 more)
example/test/: conftest.py
src/tableio/: __init__.py  _archive_rewrite.py  access_capability.py  border_helper.py  capability.py  color.py  config_data.py  config_data_apply.py  config_data_describe.py  config_data_error.py  config_data_validate.py  factory.py  optional_args.py  reg_pkg_formats.py  tableio.py  tableio_csv.py  tableio_excel_openpyxl.py  tableio_excel_pylightxl.py  tableio_excel_xlsxwriter.py  tableio_excelbased.py  tableio_mformat.py  tableio_mformatbased.py  tableio_ods_odfdo.py  tableio_spreadsheetbased.py  tableio_textbased.py  tableio_types.py  value_type.py  valueconversion.py
test/test_tableio/: __init__.py  check_capsys.py  excel_inspect_helper.py  excel_test_file_helper.py  file_access_test_helper.py  impl_meta_test_helper.py  speed_test.py  spreadsheet_test_helper.py  test_access_capability.py  test_archive_rewrite.py  test_border_helper.py  test_capability.py  test_config_data.py  test_config_data_describe.py  test_config_data_validate.py  test_excel_cross.py  test_factory.py  test_factory_formatinfo.py  test_factory_selection.py  test_optional_args.py  test_reg_pkg_formats.py  test_speed_test.py  test_tableio.py  test_tableio_csv.py  test_tableio_excel_openpyxl.py  test_tableio_excel_pylightxl.py  test_tableio_excel_xlsxwriter.py  test_tableio_fmtwrite.py  test_tableio_mformat.py  test_tableio_ods_odfdo.py  test_tableio_sheet_and_access.py  test_tableio_spreadsheetbased.py  test_tableio_textbased.py  test_value_type.py  test_valueconversion.py
(+22 files in other folders)
